[package]
name = "Screen-Recorder---Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
scrap = "0.5.0"
eframe = "0.32.0"
image = "0.25.6"
ffmpeg-next = "7.1.0"
winit = "0.30.12"
log = "0.4.27"
env_logger = "0.11.8"
thiserror = "2.0.12"
rgb = "0.8.52"
cpal = "0.16.0"
chrono = "0.4.41"
tokio = { version = "1.47.1", features = ["full"] }
rfd = "0.15.4"
egui_extras = "0.32.0"
rdev = "0.5.3"
egui = "0.32.0"
